ChangeLog for hub.top.seda
--------------------------

Version 1.0.5
-------------
+ added support for final markings, the editor can now create Fiona-readable .owfn files with final markings
+ created a transactional editing domain "hub.top.editor.ptnetLoLA.editingDomain" for the EMF models
+ installed a listener and an adapter for "hub.top.editor.ptnetLoLA.editingDomain" to handle the removal of arcs from the net; now all references get updated properly such that arcs can be deleted from a model and this opeation is undoable


Version 1.0.3
-------------
+ changed to X.Y.Z.qualifier versioning scheme to avoid problems with the Eclipse update mechanism, fixes bug #12197: "Seda: pre-compiled plugins fail under Linux" <https://gna.org/bugs/index.php?12197>
+ added check for dealing with workspace external files during conversion [hub.top.editor.resource, hub.top.editor.ptnetLoLA.diagram]
+ fixed bug to load workspace-external text files [hub.top.editor.resource, hub.top.editor.lola.text, hub.sam.tef]
+ changed to Java compiler compliance level 5, so Seda runs on systems with JavaSE 5 as well,
+ changed all hub.top.* plug-in versions to 1.0.3
+ changed hub.sam.tef.* to reduce the dependencies to a minimum, the TEF runtime no longer depends on the Eclipse JDT, Ant, and Eclipse PDE

Version 1.0.1
-------------
+ fixed plugin build configuration in MANIFEST.INF to include resources and icons [hub.top.editor.lola.text]